force-app/main/default/objects/custom_create335__c/custom_create335__c.object-meta.xml
<CustomObject>
    <label>Custom created object335</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects335</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>