force-app/main/default/objects/custom_create335__c/fields/custom_create_335field503__c.field-meta.xml
<CustomField>
    <fullName>custom_create_335field503__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 335field503</label>
    <type>Checkbox</type>
</CustomField>